[gd_scene load_steps=10 format=3 uid="uid://bw143tfxip5bn"]

[ext_resource type="Script" path="res://angle_scales.gd" id="1_6l07b"]
[ext_resource type="Script" path="res://Scale.gd" id="1_xeh30"]
[ext_resource type="Texture2D" uid="uid://da80bp7dsngfn" path="res://Sprites/crossbar.png" id="2_uoagv"]
[ext_resource type="Script" path="res://LeftPlate.gd" id="3_grs1s"]
[ext_resource type="Script" path="res://RightPlate.gd" id="4_ps5g6"]
[ext_resource type="Texture2D" uid="uid://bd7gg2w6fgx5x" path="res://Sprites/bar.png" id="4_xwv78"]
[ext_resource type="Script" path="res://BoxFactory.gd" id="7_p0fci"]
[ext_resource type="Texture2D" uid="uid://cb77pp0ogo1lp" path="res://icon.svg" id="8_jkqfj"]
[ext_resource type="Script" path="res://Sprite2D.gd" id="9_l7t14"]

[node name="AngleScales" type="Node2D"]
script = ExtResource("1_6l07b")

[node name="Scale" type="Node2D" parent="."]
position = Vector2(735, 423)
script = ExtResource("1_xeh30")

[node name="Crossbar" type="Node2D" parent="Scale"]

[node name="Sprite2D" type="Sprite2D" parent="Scale/Crossbar"]
texture = ExtResource("2_uoagv")

[node name="LeftPlate" type="Node2D" parent="Scale"]
position = Vector2(-200, 0)
script = ExtResource("3_grs1s")

[node name="LeftPlateSprite" type="Sprite2D" parent="Scale/LeftPlate"]
position = Vector2(7, 88)
rotation = 1.5708
texture = ExtResource("4_xwv78")

[node name="RightPlate" type="Node2D" parent="Scale"]
position = Vector2(200, 0)
script = ExtResource("4_ps5g6")

[node name="RightPlateSprite" type="Sprite2D" parent="Scale/RightPlate"]
position = Vector2(-7, 88)
rotation = 1.5708
texture = ExtResource("4_xwv78")

[node name="TestTools" type="Node2D" parent="."]

[node name="ToLeftButton" type="Button" parent="TestTools"]
offset_left = 415.0
offset_top = 729.0
offset_right = 532.0
offset_bottom = 767.0
text = "Left"

[node name="ToCenterButton" type="Button" parent="TestTools"]
offset_left = 670.0
offset_top = 725.0
offset_right = 799.0
offset_bottom = 768.0
text = "Center"

[node name="ToRightButton" type="Button" parent="TestTools"]
offset_left = 917.0
offset_top = 723.0
offset_right = 1021.0
offset_bottom = 770.0
text = "Right"

[node name="BoxFactory" type="Node2D" parent="."]
position = Vector2(134, 135)
script = ExtResource("7_p0fci")

[node name="Sprite2D" type="Sprite2D" parent="BoxFactory"]
position = Vector2(1, -2)
texture = ExtResource("8_jkqfj")
script = ExtResource("9_l7t14")

[connection signal="pressed" from="TestTools/ToLeftButton" to="." method="_on_to_left_button_pressed"]
[connection signal="pressed" from="TestTools/ToCenterButton" to="." method="_on_to_center_button_pressed"]
[connection signal="pressed" from="TestTools/ToRightButton" to="." method="_on_to_right_button_pressed"]
